# fridapk

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  fridapk  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
src/: __init__.py  cli.py  config.py  exceptions.py  main.py
src/core/: __init__.py  apk_processor.py  dependencies.py  gadgets.py
src/utils/: __init__.py  colors.py  logger.py
tests/: test_dependencies.py
